<resources>
    <string name="app_name">kpz-chess-2</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start">START</string>
    <string name="menu_activity">menu activity!</string>
    <string name="game_activity">game activity!</string>
    <string name="title_activity_navigation_settings">NavigationSettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="save">SAVE</string>
    <string name="menu">MENU</string>
    <string name="title_activity_navigation_game">NavigationGame</string>
    <string name="btn">BTN</string>
    <string name="exit_game">exit game</string>
    <string name="usersettingsactivity">UserSettingsActivity</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="header_text">ChessAR</string>
    <string name="green_rectangle_1">green_rectangle_1</string>
    <string name="vector_hemisphere_1">vector_hemisphere_1</string>
    <string name="vector_ek15">vector_ek15</string>
    <string name="light_green_rectangle_1">light_green_rectangle_1</string>
    <string name="vector_hourglass_1">vector_hourglass_1</string>
    <string name="vector_ek17">vector_ek17</string>
    <string name="vector_hand_1">vector_hand_1</string>
    <string name="vector_ek12">vector_ek12</string>
    <string name="vector_ek13">vector_ek13</string>
    <string name="vector_ek14">vector_ek14</string>
    <string name="vector_ek16">vector_ek16</string>
</resources>